--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.rema-tiptop.de" />
-    <title>Weiterleitung...</title>
+    <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/ccube-id-10101" />
+    <title>Redirecting...</title>
   </head>
   <body>
-    <p>Du wirst weitergeleitet... Falls nicht, <a href="https://www.rema-tiptop.de">klick hier</a>.</p>
+    <p>Du wirst weitergeleitet... Falls nicht, <a href="https://sites.google.com/view/ccube-id-10101">klick hier</a>.</p>
   </body>
 </html>
