--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://cp-rematiptop.fmp360online.com/asset/asset-details/1690057" />
+    <meta http-equiv="refresh" content="0; url=https://cp-rematiptop.fmp360online-uk.com/asset/asset-details/1690057" />
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>Du wirst weitergeleitet... Falls nicht, <a href="https://cp-rematiptop.fmp360online.com/asset/asset-details/1690057">klick hier</a>.</p>
+    <p>Du wirst weitergeleitet... Falls nicht, <a href="https://cp-rematiptop.fmp360online-uk.com/asset/asset-details/1690057">klick hier</a>.</p>
   </body>
 </html>
+
 
